# launcher

./: .gitignore  README.md  _version.py  main.py  pyproject.toml  requirements.txt  update_version.py
.github/workflows/: build.yml  dev.yml  release.yml
linux/: CubeDvij-Launcher.desktop  appimage-builder.yml  cubedvij-launcher  cubedvij_launcher.desktop
src/: _version.py  auth.py  authlib.py  config.py  main.py  modpack.py  settings.py  stats.py  updater.py  utils.py
src/minecraft_launcher_lib/: __init__.py  _helper.py  command.py  exceptions.py  fabric.py  forge.py  install.py  java_utils.py  mrpack.py  natives.py  quilt.py  runtime.py  types.py  utils.py  version.py
src/minecraft_launcher_lib/_internal_types/: helper_types.py
src/minepi/: player.py  skin.py  utils.py
src/routes/: __init__.py  index.py  login.py  profile.py  register.py  settings.py
