[project]
name = "cubedvij-launcher"
version = "1.0.5"
description = "Launcher for Minecraft server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flet-cli>=0.27.6",
    "flet[desktop]>=0.27.6",
    "mcstatus>=11.1.1",
    "minecraft-launcher-lib>=7.1",
    "pillow>=11.2.1",
    "psutil>=7.0.0",
    "pyinstaller>=6.13.0",
]
