[project]
name = "cubedvij-launcher"
version = "1.2.0"
description = "Launcher for Minecraft server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flet-cli>=0.27.6",
    "flet[desktop]>=0.27.6",
    "mcstatus>=11.1.1",
    "pillow>=11.2.1",
    "psutil>=7.0.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.13.0",
]
