[project]
name = "cubedvij-launcher"
version = "1.2.0"
description = "Launcher for Minecraft server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flet_cli>=0.28.2",
    "flet[desktop]>=0.28.2",
    "minestat>=2.6.3",
    "pillow>=11.2.1",
    "psutil>=7.0.0",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "ua.aos"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "CubeDvij Launcher"

# company name to display in about app dialogs
company = "AOS"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by AOS"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "pyinstaller>=6.13.0",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.1"}
